Bug:103417,103431
Merging from JUDASPRIEST to main.

Regression from the bug fix of 101585 where appointment name is truncated using AjxStringUtil.fitString method which is rendering the content to calculate its width. 

Fix: AjxStringUtil.htmlEncode method is called before calling AjxStringUtil.fitString method.

https://bugzilla.zimbra.com/show_bug.cgi?id=103417
https://bugzilla.zimbra.com/show_bug.cgi?id=103431

Copied from Perforce
 Change: 564318

--- a/WebRoot/css/zm.css
+++ b/WebRoot/css/zm.css
@@ -573,7 +573,7 @@ INPUT[type="text"].search_input-expanded:focus {
 }
 
 .Unread .ZmConvListNumMsgs {
-	background-color:@darken(AppC,40)@;
+	background-color:@UnreadColor@;
 }
 
 .ZmConvExpanded,
